--- a/gb/22/12/1/n13876693.md
+++ b/gb/22/12/1/n13876693.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>吴惠林：导读—愈陈愈香的2020年版《资本主义与自由》</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/12/id13876694-83e9be61f178471fedb3a16f8d77d6db-600x400.jpg" />
 <h6>本书封面。（文章作者提供）
 </h6>
 <hr>
-	<p>【大纪元2022年12月01日讯】“天下没有白吃的午餐”（There’s No Such Thing as a Free Lunch）这句当代人几乎都能琅琅上口的话语，其原始出处虽有争议，但它之所以能脍炙人口，无疑归功于密尔顿?弗利曼（Milton Friedman, 1912～2006）这位一九七六年诺贝尔经济学奖得主、有“二十世纪最伟大的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%87%AA%E7%94%B1%E7%BB%8F%E6%B5%8E.md#1">自由经济</a>学家”美誉的经济学大师。由于弗利曼在写给大众的通俗文章于一九七五年集结成书用这句话作为书名，这句话才风迷全球，这同时也凸显出弗利曼在公众中享有极高的声誉。</p>
-<p>弗利曼获颁诺贝尔奖，足证其学术成就之高，但他之所以享誉全球、对人类有极大的贡献，却是在公共政策领域上对“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%87%AA%E7%94%B1%E7%BB%8F%E6%B5%8E.md#1">自由经济</a>理念”的大力传布、推广之故。他在这方面不但著作等身，而且风尘仆仆到各国对国家领导人和普罗大众耳提面命。为了发挥更大影响力，弗利曼在一九六八年十一月与海勒（W. Heller, 1915～1987）举行公开大辩论，也在《新闻周刊》（Newsweek）一段时间（1966～1984）与萨缪尔逊（P. A. Samuelson，1915～2009, 凯因斯学派最主要大将，一九七０年第二届诺贝尔经济学奖得主）纸上论战，被萨缪尔逊称为“经济学界的鳗鱼”。</p>
+	<p>【大纪元2022年12月01日讯】“天下没有白吃的午餐”（There’s No Such Thing as a Free Lunch）这句当代人几乎都能琅琅上口的话语，其原始出处虽有争议，但它之所以能脍炙人口，无疑归功于密尔顿?弗利曼（Milton Friedman, 1912～2006）这位一九七六年诺贝尔经济学奖得主、有“二十世纪最伟大的自由经济学家”美誉的经济学大师。由于弗利曼在写给大众的通俗文章于一九七五年集结成书用这句话作为书名，这句话才风迷全球，这同时也凸显出弗利曼在公众中享有极高的声誉。</p>
+<p>弗利曼获颁诺贝尔奖，足证其学术成就之高，但他之所以享誉全球、对人类有极大的贡献，却是在公共政策领域上对“自由经济理念”的大力传布、推广之故。他在这方面不但著作等身，而且风尘仆仆到各国对国家领导人和普罗大众耳提面命。为了发挥更大影响力，弗利曼在一九六八年十一月与海勒（W. Heller, 1915～1987）举行公开大辩论，也在《新闻周刊》（Newsweek）一段时间（1966～1984）与萨缪尔逊（P. A. Samuelson，1915～2009, 凯因斯学派最主要大将，一九七０年第二届诺贝尔经济学奖得主）纸上论战，被萨缪尔逊称为“经济学界的鳗鱼”。</p>
 <h2>经济学界鳗鱼的情操</h2>
 <p>这个比喻鲜活地点出弗利曼的自由经济观点在当时属于少数，但却颇富攻击力，有如远洋渔业捕鱼者，为了维持所补获鱼群的新鲜，必须放入几条鳗鱼与鱼群相斗。这也显示出弗利曼处境的艰难，但他为真理“义无反顾、勇往直前”，只身力战群雄。</p>
 <p>除了以文章、演讲、辩论宣扬自由经济理念外，弗利曼更深入政治专制独裁国度与领导人对谈，或充当经济顾问，将经济自由灌输在政策决策者脑中，最有名的当推他在一九七0年代充当智利军政府独裁者皮诺契特（Augusto Pinochet, 1915～2006）顾问，促使智利致力推动市场自由化策略。但也因为如此，弗利曼在1976年被宣布荣获诺贝尔经济学奖时，引发史无前例的抗议风波。</p>
@@ -15,8 +15,8 @@
 <p>除了有这种书信抗议外，颁奖那天，场内有一人抗议，场外更有四千人示威，创下截至该年为止，共七十五年诺贝尔奖颁奖典礼受到破坏的先例，且因示威者挡道，典礼后的国王传统晚宴，也首度延迟开席。虽然受到如此激烈抗议，弗利曼仍坚持其借机转变独裁者理念的作法，继续充当各国政要的咨询顾问，最著名的就是与中共经改初期的关键人物赵紫阳在一九八八年的长达两小时面对面会谈。</p>
 <p>为何弗利曼敢于干犯众怒，冒着“为虎作伥”的罪名持续帮军事独裁者拟定经改政策？在弗利曼夫妇一九九八年出版的对话式自传《两个幸运的人》（Two Lucky People）的第二十四和二十六两章，对该事件的始末，有非常详细的记载和辩解。我的理解是，弗利曼相信“经济自由的结果将促成政治自由”。在智利，皮诺契特将军接受人民的裁决（公民投票），安排于一九八九年十二月进行总统选举，军事执政团把政权交给自由选举产生的政府，恢复了真正的政治自由，而新民主政府继续执行自由市场经济政策，也终究实现了“自由市场经济在自由社会中健全运作”的终极目标。</p>
 <h2>坚信自由经济最能造福人群</h2>
-<p>弗利曼之所以有如此的勇气，就在其对自由经济或市场经济的坚信，坚信这种制度对人类的福祉最有助益。为了促进人类福祉，不辞辛劳地做自由经济布道工作，他将其完整理念在一九六二年作了统整，以《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%84%E6%9C%AC%E4%B8%BB%E4%B9%89.md#1">资本主义</a>与自由》（Capitalism and Freedom）这本书呈现，而这是一本以一般读者为对象的书。</p>
-<p>由于当时那些深恐政府规模扩大，以及深恐福利国家和凯因斯思想的得势会危及自由和繁荣者，是被归属于相当多数的同辈知识分子视为怪异份子的少数团体，该书因而受到漠视，没有任何一份全国性的主要刊物对之评论，即使如此，该书出版十八年也卖出了四十几万本。到一九八０年，当《选择的自由》（Free to Choose）这本书出版时，情况却大为改观。这由弗利曼在《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%84%E6%9C%AC%E4%B8%BB%E4%B9%89.md#1">资本主义</a>与自由》的〈一九八二年版序言〉中可清楚得知。</p>
+<p>弗利曼之所以有如此的勇气，就在其对自由经济或市场经济的坚信，坚信这种制度对人类的福祉最有助益。为了促进人类福祉，不辞辛劳地做自由经济布道工作，他将其完整理念在一九六二年作了统整，以《资本主义与自由》（Capitalism and Freedom）这本书呈现，而这是一本以一般读者为对象的书。</p>
+<p>由于当时那些深恐政府规模扩大，以及深恐福利国家和凯因斯思想的得势会危及自由和繁荣者，是被归属于相当多数的同辈知识分子视为怪异份子的少数团体，该书因而受到漠视，没有任何一份全国性的主要刊物对之评论，即使如此，该书出版十八年也卖出了四十几万本。到一九八０年，当《选择的自由》（Free to Choose）这本书出版时，情况却大为改观。这由弗利曼在《资本主义与自由》的〈一九八二年版序言〉中可清楚得知。</p>
 <p>弗利曼这样写着：“过去二十五年来学术气候转变之大，可由我的妻子和我合著的《选择的自由》一书所受到非常不同的待遇得到证明。《选择的自由》一书刊行于一九八０年，在思想上直接承袭《资本主义与自由》。《选择的自由》得到所有主要刊物的评论，而且通常是具有特色的长篇评论。《书摘》不仅摘述该书，而且以它为封面作号召。《选择的自由》出版后的第一年就在美国卖出四十万册精装本，一九八一年初并印行普及版，而且已被译成十二种外国文字。</p>
 <p>我们认为这两本书被接受程度的不同，不在于品质的差别。事实上，较早的那本较着重哲学思想，也较抽象，因此是较为基本的。而《选择的自由》，如同我们在该书的序言所说的，‘较多精微实例，较少理论架构’，《选择的自由》补足了，而非取代了《资本主义与自由》。从表面上看，读者对这两本书有不同的接受程度，可以归功于电视的力量。《选择的自由》是根据我们在公共电视台同名的节目而设计的，原本也是要伴随该节目的推出来销售。毫无疑问，电视影集的成功，突显了该书的卓越。</p>
 <p>这种解释相当肤浅，因为电视节目本身的存在和成功，正可证明学术气候的改变。在一九六０年代，从未有人来找我们制作像《选择的自由》这样的电视节目；这样的节目即使有赞助者的话，也必定很少。如果真的制作出这样的节目来，观众也一定少得可怜。因此，《选择的自由》所得到的不同待遇，以及电视影集的成功，正是舆论气候改变的当然结果。虽然我们这两本书的论调依然称不上知识的主流，但至少现在已得到知识分子的尊重，而在广大的读者群中几乎要被视为传统的作品了。”</p>
@@ -49,7 +49,7 @@
 <p>我必须再强调，翻译是吃力不讨好的工作，物质报酬率极低，但对知识的传布、交流却极为重要，翻译好一本书甚至比自己创作还难，遗憾的是，往往受到轻视，也被误解为轻而易举之事，于是很难吸引名家来作。因此，个人感谢谢宗林兄愿意加入翻译不朽名著的阵营，也钦佩五南公司的出版魄力。当时，更希望本书能引起广大读者的注意、思考，终而使社会更和谐、国人福祉更增进。</p>
 <p>有意思的是，这本新翻译书在二０一０年即将付梓出版之际，英国在当年五月十三日“政党轮替”，以保守党为首的联合政府上台，被认为是全欧洲政坛向右转的最新例证。当时中间偏右的政党或联合政府都在西欧大国占上风，包括德、法、英与意大利。波兰、匈牙利等东欧国家已是右派当权，至于南欧伊比利半岛的西班牙与葡萄牙，当家的社会党正竭力抵挡保守派反对党的步步进逼。</p>
 <p>当年《洛杉矶时报》引述分析家的看法指出，虽然国际金融体制几近解体，全球经济衰退又接踵而来，但这股默默持续数年的向右转趋势，正方兴未艾。选民不但没有受到某些专家们批判“资本主义失灵”而惩罚右派政党，反而找它们出面收拾残局。</p>
-<h2>选择右派收拾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E5%8D%B1%E6%9C%BA.md#1">金融危机</a>残局</h2>
+<h2>选择右派收拾金融危机残局</h2>
 <p>设在伦敦的“欧洲改革中心”研究员欧唐纳当时说：“许多欧洲国家的人民相信，中间偏右政党比中间偏左政党更有能力应付经济问题。”</p>
 <p>以英国为例，保守党在选举时强调整顿金融乃当务之急，批评工党放任政府预算赤字达到类似希腊的比例，并开出当年就要删除九十亿美元支出的支票。二０一０年新首相卡麦隆五月十三日上台当天召开首次内阁会议，内阁阁员立即减薪百分之五，借此宣示要把矫正国家财政列为施政优先项目。</p>
 <p>当时的欧洲为何会有向右转现象？政治专家分析，一个理由是左派政党已向中间靠拢，有时甚至吸收右派的政策理念为己有。另一个理由则是要削减赤字就只能削减支出，没有其它办法，也因此意识形态变得不管用。譬如在希腊与西葡执政的社会党人士，受限于欧元区规定，只能推严苛的撙节措施来降低膨胀的公共赤字，与保守派政党没有两样。或者可以说，各国政府采用“印钞救市”拉拔经济，其实不被人民所认同，而金融海啸和经济萧条也不被认为是市场失灵或资本主义失败，反而是大政府或政府干预经济失当所致。</p>
@@ -65,45 +65,36 @@
 <p>作者是中华经济研究院特约研究员</p>
 <p>责任编辑：朱颖</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/10/n11102408.md#1">重启自由经济示范区？财部：管理面临挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/11/n11104173.md#1">重启自由经济示范区 台财长：无法打破闷经济</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/4/n12789949.md#1">香港被剔出自由经济体评级 恒指跌逾700点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/22/n13391978.md#1">项云：中共打台湾还是打台湾牌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/10/n11102408.md#1">重启自由经济示范区？财部：管理面临挑战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/11/n11104173.md#1">重启自由经济示范区 台财长：无法打破闷经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/4/n12789949.md#1">香港被剔出自由经济体评级 恒指跌逾700点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/22/n13391978.md#1">项云：中共打台湾还是打台湾牌</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/26/n11478084.md#1" target="_blank">翻译家巫宁坤爱国竟受难 历劫著书留警训</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/29/n11287543.md#1" target="_blank">纽约市七位市议员祝贺法轮大法日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910412.md#1">楚一丁：天道示警——三年死了四亿人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909653.md#1">【未解之谜】西方极乐世界游记（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906912.md#1">传统年俗代代传  只为守护天人相系的纽带</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910383.md#1">【百年真相】差点改写九一三事件 林豆豆挨整始末</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906660.md#1">悟空为何能得“长生”之法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914897.md#1">【新闻看点】江西再推全员核酸 舆论炸锅后取消</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914850.md#1">【中国禁闻】城市医护大幅减薪 农村严重缺药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914699.md#1">【十字路口】人生到底为何来 宿命通名人多？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914332.md#1">疫情已传遍中国大多地区 第二波恐更致命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914074.md#1">专家：官员躺平 内斗不止 中共处于崩溃边缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914062.md#1">多国电站现烂尾 中共一带一路项目在崩溃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913498.md#1">穿30年前旗袍拜年 55岁周慧敏冻龄外表获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913535.md#1">沈腾春晚小品《坑》窜热搜 话题惊动中纪委</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914214.md#1">林志颖康复露面气色佳 拍品牌形象片拜年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914317.md#1">李若彤分享冻龄秘笈：20多年没喝汽水</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914701.md#1">相隔20年参加同学会 谢佳见惊见“这一幕”吓坏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913695.md#1">寒冬还没来 2023年影响美国地产的重磅消息！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910496.md#1">学会放下，幸福就来了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913652.md#1">【美食天堂】鲜虾锅贴做法～ 皮酥脆馅料多汁美味！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913310.md#1">香草精用完了？ 这八类食材可替代</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906674.md#1">茶评15论：茶叶与茶汤的品赏心理与妙趣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276851.md#1">【杨延昭传奇】杨延昭威震三关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282650.md#1">【全球新闻】首位遭中共活摘器官幸存者现身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282652.md#1">【晚间新闻】美报告：中共扩大古巴间谍基地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282483.md#1">【时事金扫描】哈马斯曝大量火箭弹来自中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281682.md#1">浙大女生申请赴美留学消息意外火爆 网民热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281736.md#1">美军机重返二战“噩梦”战场 剑指中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281880.md#1">中国经济低迷 年轻人开始“报复性存钱”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281700.md#1">何韵诗网上音乐会两度中断 因港警到场查身份</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281392.md#1">14天旅游只需带一个背包 打包行李8秘诀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281917.md#1">为什么棉质衣物洗了会缩水？ 如何抢救？</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/1/n13876693.htm">吴惠林：导读—愈陈愈香的2020年版《资本主义与自由》</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/1/n13876693.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/12/1/n13876693.htm">吴惠林：导读—愈陈愈香的2020年版《资本主义与自由》</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/1/n13876693.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
