--- a/gb/24/6/27/n14278861.md
+++ b/gb/24/6/27/n14278861.md
@@ -155,7 +155,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282633.md#1">民主党急推SB 1381以救Prop47 李少敏：请紧急否决</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282351.md#1">川普“封口费案”检察官同意推迟宣判</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/25/n11000755.md#1" target="_blank">文革处决纪录：非战争下的中国之最</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/4/n10023278.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/26/n9322928.md#1" target="_blank">一位法轮功学员家属想要说的话</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
